--- a/src/css/btn.css
+++ b/src/css/btn.css
@@ -10,6 +10,7 @@
   box-sizing: border-box;
   font-family: 'Titillium Web', sans-serif;
   letter-spacing: 2px;
+  cursor: pointer;
 }
 
 .btn.green {
