--- a/src/css/btn.css
+++ b/src/css/btn.css
@@ -1,30 +1,39 @@
 
 .btn {
-  color: black;
-  padding: 4px;
-  box-sizing: border-box;
+  padding: 7px 29px;
   vertical-align: middle;
-  width: 100px;
-  border-radius: 10px;
-  border-color: black;
   box-sizing: border-box;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: Titillium Web,sans-serif;
   letter-spacing: 2px;
   cursor: pointer;
   font-weight: 900;
+  border-width: 0px;
+  min-width: 115px;
 }
 
-.btn.green {
-  background-color: #2ece2e;
+.btn-main {
+  color: white;
+  background-color: #288ac6;
+  box-shadow: #468fbb 0px 0px 1px 1px;
 }
+
+.btn-main:hover {
+  box-shadow: #288ac6 0px 0px 1px 2px;
+}
+
+.btn:active, .btn-main:active {
+  color: white;
+  padding: 8px 29px 6px;
+}
+
 .btn.red {
   background-color: #b22222;
 }
 
-.btn:active {
-  padding-top: 5px;
-  padding-bottom: 3px;
+.btn.green {
+  background-color: green;
 }
+
 
 .btn:focus {
   outline: none;
