main-box style on main page

--- a/src/css/misc.css
+++ b/src/css/misc.css
@@ -1,7 +1,8 @@
 .main-box {
   width: 800px;
-  height: 800px;
+  min-height: 800px;
   margin: 30px auto;
   background-color: #314f79;
   border: 1px solid black;
+  padding-bottom: 25px;
 }
